--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,48 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  font-size: 16px;
+  padding: 10px;
 }
 
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 10px auto;
+  padding: 16px;
+  font-size: 16px;
 }
 
 .title {
   background: #e3f4ff;
+  margin: 16px auto;
+  padding: 10px;
+  font-size: 16px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px;
+  font-size: 16px;
+  text-align: left;
+  margin-bottom: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 16px auto;
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  padding: 10px;
+  margin: 0 auto;
 }
